# bazel-terraform-jsonnet-vault-demo

./: .gitignore  README.md  WORKSPACE
jsonnet/: BUILD.bazel  main.tf.json  main.tf.jsonnet
tf/: main.tf
