load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

jsonnet_to_json(
    name = "main",
    src = "main.tf.jsonnet",
    outs = ["main.tf.json"],
)

pkg_tar(
    name = "tf",
    srcs = ["//jsonnet:main"],
    mode = "0755",
)
